--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@forge/bridge": "3.2.0",
     "@forge/react": "9.2.0",
     "@forge/resolver": "1.5.27",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "victory": "^36.9.1"
   }
 }
