--- a/manifest.yml
+++ b/manifest.yml
@@ -5,15 +5,14 @@ modules:
       resolver:
         function: resolver
       render: native
-      title: JHCIV
+      title: JHCIV Issue Panel
       icon: https://developer.atlassian.com/platform/forge/images/icons/issue-panel-icon.svg
   jira:projectPage:
     - key: jchiv-project-page
       resource: project-page
       resolver:
         function: resolver
-      title: JHCIV
-      icon: https://developer.atlassian.com/platform/forge/images/icons/project-page-icon.svg
+      title: JHCIV Dashboard
   function:
     - key: resolver
       handler: resolvers.handler
@@ -30,4 +29,7 @@ permissions:
   external:
     fetch:
       backend:
-        - 'https://9451-2001-8003-401a-c800-25d1-590c-8dd-4f26.ngrok-free.app/*'
+        - 'https://b804-2001-8003-401a-c800-b9b9-df83-21f8-e22d.ngrok-free.app/*'
+  content:
+    styles:
+      - unsafe-inline
