--- a/manifest.yml
+++ b/manifest.yml
@@ -29,7 +29,7 @@ permissions:
   external:
     fetch:
       backend:
-        - 'https://8c1f-2001-8003-401a-c800-b9b9-df83-21f8-e22d.ngrok-free.app/*'
+        - 'https://fc16-2001-8003-401a-c800-b1d6-af9c-cc64-ea0e.ngrok-free.app/*' # change this when new tunnel is used
   content:
     styles:
       - unsafe-inline
